# pot-holes-detection

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/: index.html
cli/: index.html
cli/loader/: index.html
cli/plotter/: index.html
cli/trainer/: index.html
cli/video/: index.html
data-layout/: index.html
data/generated-files/: index.html
data/session-files/: index.html
docs/: cli.md  data-layout.md  getting-started.md  index.md
docs/api/: index.md
docs/cli/: loader.md  plotter.md  trainer.md  video.md
docs/data/: generated-files.md  session-files.md
docs/stylesheets/: extra.css
getting-started/: index.html
search/: search_index.json
src/: generator.py  loader.py  plot_tools.py  signal_tools.py  split_session.py
src/old_files/: generator.py  loader.py
src/old_files/plot/: plot_tools.py
src/potholes/: loader.py
src/potholes/detection/: data.py  trainer.py
src/potholes/detection/data/: __init__.py  dataset.py  old_dataset.py
src/potholes/detection/models/: transformer.py
src/potholes/old/: generator.py
src/potholes/old/model/: dataset.py  generate_csv.py  split.py  transformer.py
src/potholes/old/plot/: plot_tools.py
src/potholes/old_files/: generator.py
src/potholes/old_files/plot/: plot_tools.py
src/potholes/tools/: generator.py  gps_tools.py  load_tools.py  plot.py  plot_plotly.py  session.py  video.py
src/tools/: generator.py  load_tools.py  plot.py  plot_plotly.py  session.py  signal_tools.py  video.py
stylesheets/: extra.css
